missingkids/less/css/application.css
/* ... */
.header-container.home .navbar .container .secondary-header {
  display: none;
}
@media (min-width: 767px) and (max-width: 992px) {
  .header-container.home .navbar .container .secondary-header {
    display: flex;
    background: none;
  }
  .header-container.home .navbar .container .secondary-header .social-icons {
    visibility: hidden;
  }
  .header-container.home .navbar .container .secondary-header .site-functionalities .language-selector {
    visibility: hidden;
  }
}
@media (min-width: 992px) {
  .header-container.home .navbar .container .secondary-header {
    display: flex;
  }
}
@media (min-width: 992px) {
  .header-container.home .navbar .container .secondary-header .social-icons {
    display: none;
  }
}
@media (min-width: 767px) {
  .scroll-started .header-container .navbar .container .secondary-header {
    background-color: transparent;
  }
  .scroll-started .header-container .navbar .container .secondary-header .language-selector,
  .scroll-started .header-container .navbar .container .secondary-header .social-icons {
    display: none;
  }
}
@media (min-width: 480px) and (max-width: 768px) {
  .scroll-started .header-container .navbar .container .secondary-header .search-wrapper {
    right: 120px;
  }
}
@media (min-width: 767px) and (orientation: landscape) {
  .scroll-started .header-container .navbar .container .secondary-header .site-functionalities {
    position: absolute;
    top: 27px;
    right: 170px;
  }
  .scroll-started .header-container .navbar .container .secondary-header .site-functionalities .search-icon {
    position: static;
  }
  .scroll-started .header-container .navbar .container .secondary-header .site-functionalities .language-selector {
    display: block;
  }
}
@media (min-width: 767px) {
  .scroll-started .header-container .navbar .container .scroll-started-action {
    display: block;
  }
}
@media (max-width: 768px) {
  .scroll-started .header-container .navbar .container .scroll-started-action {
    margin: 16px 8px 16px 0;
  }
}
body.fixed-breadcrump .header-container .navbar .container .secondary-header .search-wrapper {
  right: -58px;
}
body.fixed-breadcrump .header-container .navbar .container .secondary-header .language-selector {
  display: block !important;
}
body.fixed-breadcrump .header-container .navbar .container .secondary-header .social-icons {
  display: block !important;
}
.hero-banner-wrapper .hero-banner {
  position: relative;
  height: 218px;
  overflow: hidden;
  display: block;
}
@media (min-width: 767px) {
  .hero-banner-wrapper .hero-banner {
    height: 397px;
  }
}
@media (min-width: 992px) {
  .hero-banner-wrapper .hero-banner {
    height: 435px;
  }
}
.hero-banner-wrapper .hero-banner picture,
.hero-banner-wrapper .hero-banner img {
  max-width: none;
  position: absolute;
  min-width: 100%;
  left: 0;
  top: 0;
  width: auto;
}
.hero-banner-wrapper .hero-banner iframe {
  position: absolute;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper {
  position: relative;
  min-height: calc(70%);
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content {
  position: absolute;
  left: 10px;
  top: 10px;
}
@media (min-width: 992px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content {
    left: 0;
    top: 20px;
  }
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .title {
  max-width: 200px;
  color: inherit;
  line-height: 32px;
  margin: 0;
  font-size: 24px;
}
@media (min-width: 767px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .title {
    max-width: 260px;
    margin: 0 0 24px;
    font-size: 36px;
    line-height: 46px;
  }
}
@media (min-width: 992px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .title {
    margin: 0 0 32px;
  }
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .desc {
  max-width: 380px;
  color: inherit;
  font-size: 16px;
  line-height: 24px;
}
@media (max-width: 767px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .desc {
    margin: 10px 0;
  }
}
@media (min-width: 767px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .desc {
    font-size: 24px;
    line-height: 32px;
    max-width: 625px;
  }
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.white {
  color: #fff;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.ship-gray {
  color: #404041;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.sun {
  color: #FDB813;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.blue-lagoon {
  color: #006C8A;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.bondi-blue {
  color: #008DB6;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.scooter {
  color: #39C2D7;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.morning-glory-blue {
  color: #92D6E3;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.mid-gray {
  color: #626366;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.oslo-gray {
  color: #939597;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.silver-stand {
  color: #C6C8CA;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content.athens-gray {
  color: #F1F1F2;
}
@media (min-width: 767px) {
  .hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .btn {
    margin-top: 10px;
  }
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .btn.right {
  float: right;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .btn.left {
  float: left;
}
.hero-banner-wrapper .hero-banner .hero-content-wrapper .hero-content .btn.center {
  float: none;
  left: 50%;
  transform: translateX(-50%);
  position: absolute;
}
/* ... */

